fix for search, adding debug flag to openapi
